# mmcompare

./: AGENTS.md  Cargo.toml  DOC.md  README.md
docs/: architecture.md  egui-api.md  layout.md  local-mode.md  threading.md
src/: app.rs  main.rs  state.rs
src/core/: image.rs
src/ui/: cell.rs  menu.rs  mod.rs  viewer.rs  widgets.rs
