[package]
name = "mmcompare"
version = "0.1.0"
authors = ["Zixiang Luo <zixiangro@gmail.com>"]
edition = "2024"
rust-version = "1.96.1"
publish = false

[dependencies]
eframe = { version = "0.35", features = ["default"] }
egui_extras = { version = "0.35", features = ["default", "image"] }
env_logger = { version = "0.11.11", features = ["auto-color", "humantime"] }
image = "0.25"
rfd = "0.17"
